# cxx-spline

./: .gitignore  CMakeLists.txt  README.md  cxx-spline.h  cxx-spline.hpp  spline.hpp
.github/workflows/: test.yml
demo/: CMakeLists.txt  README.md  plot1Dspline.py  series1D.cpp  series2D.cpp
include/: spline.hpp
test/: CMakeLists.txt  Makefile  default-behav.cpp  errors.cpp  natural.cpp  not-a-knot.cpp  repeated.cpp  scipy_spline.py  test_gen.py  test_spline.cc  threadsafe.cpp
